
2006-09-10  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #3777: thumbs.php looks for file in t3lib/gfx instead of typo3/gfx

2006-09-20  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a missing space in typo3/template.php

2006-09-15  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #3862: Tools>User Admin allows switching to disabled user

2006-09-14  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4219: := appendString() did not work because the check was made for "apppendString" (typo)

2006-09-11  Michael Stucki  <michael@typo3.org>

	* Fixed a tiny security problem in indexed search (for details, see http://typo3.org/teams/security/security-bulletins/typo3-20060911-1/)
	* Release of TYPO3 4.0.2

2006-09-08  Michael Stucki  <michael@typo3.org>

	* Updates to NEWS.txt
	* Fixed #4165: Link to TSconfig and TSref not working. Thanks to Andreas Wolf for providing a patch!

2006-09-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1268: plainMailEncoded not working with charset conversion

2006-09-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed #4141: config.spamProtectEmailAddresses does not encrypt "9" digits correctly
	* Web>List localization view did not handle "edit marked" for translation records

2006-09-01 Ingmar Schlecht  <ingmar@typo3.org>

	* Feature #529: Filled static_tsconfig_help with new content of core documents! Thanks a lot to Stephane Schitter for extracting the new data from the references!

2006-09-01  Michael Stucki  <michael@typo3.org>

	* Fixed bug: Creation of sys_refindex table was not possible if $TYPO3_CONF_VARS[SYS][multiplyDBfieldSize] was set.
	* Indexed Search: Fixed bug #3994: OpenOffice.org files cannot be indexed by class.external_parser.php
	* Indexed Search: Fixed bug #4093: PHP warning if indexed_search search word contains a front slash

2006-08-31  Ernesto Baschny <ernst@cron-it.de>
